@@ -8,7 +8,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -16,7 +15,6 @@ import org.apache.commons.io.FileUtils;
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.pdmodel.PDPage;
 import org.apache.pdfbox.rendering.ImageType;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ModelAttribute;
@@ -29,26 +27,27 @@ import io.github.pixee.security.Filenames;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import stirling.software.SPDF.model.api.converters.ConvertToImageRequest;
 import stirling.software.SPDF.model.api.converters.ConvertToPdfRequest;
-import stirling.software.SPDF.service.CustomPDFDocumentFactory;
-import stirling.software.SPDF.utils.*;
-import stirling.software.SPDF.utils.ProcessExecutor.ProcessExecutorResult;
+import stirling.software.common.service.CustomPDFDocumentFactory;
+import stirling.software.common.util.CheckProgramInstall;
+import stirling.software.common.util.GeneralUtils;
+import stirling.software.common.util.PdfUtils;
+import stirling.software.common.util.ProcessExecutor;
+import stirling.software.common.util.ProcessExecutor.ProcessExecutorResult;
+import stirling.software.common.util.WebResponseUtils;
 
 @RestController
 @RequestMapping("/api/v1/convert")
 @Slf4j
 @Tag(name = "Convert", description = "Convert APIs")
+@RequiredArgsConstructor
 public class ConvertImgPDFController {
 
     private final CustomPDFDocumentFactory pdfDocumentFactory;
-
-    @Autowired
-    public ConvertImgPDFController(CustomPDFDocumentFactory pdfDocumentFactory) {
-        this.pdfDocumentFactory = pdfDocumentFactory;
-    }
 
     @PostMapping(consumes = "multipart/form-data", value = "/pdf/img")
     @Operation(
@@ -58,12 +57,12 @@ public class ConvertImgPDFController {
                             + " color type, and DPI. Users can choose to get a single image or multiple"
                             + " images.  Input:PDF Output:Image Type:SI-Conditional")
     public ResponseEntity<byte[]> convertToImage(@ModelAttribute ConvertToImageRequest request)
-            throws NumberFormatException, Exception {
+            throws Exception {
         MultipartFile file = request.getFileInput();
         String imageFormat = request.getImageFormat();
         String singleOrMultiple = request.getSingleOrMultiple();
         String colorType = request.getColorType();
-        String dpi = request.getDpi();
+        int dpi = request.getDpi();
         String pageNumbers = request.getPageNumbers();
         Path tempFile = null;
         Path tempOutputDir = null;
@@ -99,7 +98,7 @@ public class ConvertImgPDFController {
                                     : imageFormat.toUpperCase(),
                             colorTypeResult,
                             singleImage,
-                            Integer.valueOf(dpi),
+                            dpi,
                             filename);
             if (result == null || result.length == 0) {
                 log.error("resultant bytes for {} is null, error converting ", filename);
@@ -137,7 +136,7 @@ public class ConvertImgPDFController {
                     command.add(tempOutputDir.toString());
                 }
                 command.add("--dpi");
-                command.add(dpi);
+                command.add(String.valueOf(dpi));
                 ProcessExecutorResult resultProcess =
                         ProcessExecutor.getInstance(ProcessExecutor.Processes.PYTHON_OPENCV)
                                 .runCommandWithOutputHandling(command);
@@ -146,7 +145,7 @@ public class ConvertImgPDFController {
                 List<Path> webpFiles =
                         Files.walk(tempOutputDir)
                                 .filter(path -> path.toString().endsWith(".webp"))
-                                .collect(Collectors.toList());
+                                .toList();
 
                 if (webpFiles.isEmpty()) {
                     log.error("No WebP files were created in: {}", tempOutputDir.toString());
@@ -218,7 +217,7 @@ public class ConvertImgPDFController {
         MultipartFile[] file = request.getFileInput();
         String fitOption = request.getFitOption();
         String colorType = request.getColorType();
-        boolean autoRotate = request.isAutoRotate();
+        boolean autoRotate = Boolean.TRUE.equals(request.getAutoRotate());
         // Handle Null entries for formdata
         if (colorType == null || colorType.isBlank()) {
             colorType = "color";
